--- a/contact.html
+++ b/contact.html
@@ -168,7 +168,8 @@
             <!-- Left Side Ends -->
             <!-- Contact Form Starts -->
             <div class="col-12 col-lg-8">
-                <form id="contactform" class="contactform" method="post" name="google-sheet">
+                <form id="contactform" class="contactform"   action="https://formspree.io/f/xwkjljag"
+                method="POST" name="google-sheet">
                     <div class="contactform">
                         <div class="row">
                             <div class="col-12 col-md-4">
