--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Contact-Bilal</title>
+    <title>Bilal Zafar | Contact</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Template Google Fonts -->
