--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Home-Bilal</title>
+    <title>Bilal Zafar | Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Bilal Zafar is a Full stack developer"/>
+    <meta name="description" content="Aspiring Full-Stack Web Developer | Python "/>
+
 
     <!-- Template Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
